Arreglos para apk

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^6.1.2
   http: ^0.12.2
-  #shared_preferences: ^0.5.8
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
