--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.prueba_tecnica">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="prueba_tecnica"
+        android:label="Pokedex"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
